DbUtils增加查询结果集类型映射